# chemforge

./: .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  fix_chemforge_imports.py  fix_import_errors.py  fix_molecular_features_bugs.py  fix_trainer_indent.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_pydantic.py  tox.ini
.github/workflows/: chemforge.yml  ci.yml  release.yml  security.yml  test.yml
_docs/: 2025-01-24_ADMET予測モジュール実装完了.md  2025-01-24_CLI拡張実装完了.md  2025-01-24_ChEMBL正規ID更新.md  2025-01-24_ChemForgeリストラクチャリング完了.md  2025-01-24_ChemForge完全実装完了.md  2025-01-24_GPT報告書.md  2025-01-24_GUI実装完了.md  2025-01-24_Phase10実装完了.md  2025-01-24_Phase11実装完了.md  2025-01-24_Phase12実装完了.md  2025-01-24_Phase13実装完了.md  2025-01-24_Phase4実装完了.md  2025-01-24_Phase5実装完了.md  2025-01-24_Phase6実装完了.md  2025-01-24_Phase7実装完了.md  2025-01-24_Phase8実装完了.md  2025-01-24_Phase9実装完了.md  2025-01-24_X開発PR.md  2025-01-24_chembl_loader修正ループログ.md  2025-01-24_エラー修正作業ログ.md  2025-01-24_コードベースレビュー・再利用分析報告書.md  2025-01-24_テスト・ドキュメント実装完了.md  2025-01-24_データ取得・前処理モジュール実装完了.md  2025-01-24_事前学習モデル・データ実装完了.md  2025-01-24_分子生成・最適化実装完了.md  2025-01-24_創薬AIエンジニア向けPR.md  2025-01-24_学習・推論システム実装完了.md  2025-01-24_深層学習モデル実装完了.md  2025-01-24_統合・ユーティリティ実装完了.md  2025-01-24_骨格特徴量・ADMET統合実装完了.md  2025-01-25_CHEMBL_ID検証・修正完了.md  2025-01-25_GitHub_Actionsワークフロー配置完了.md  2025-01-25_PyPI_Pending_Publisher設定完了.md  2025-01-25_PyPI用設定ファイル作成完了.md  2025-01-25_PyPI登録準備完了.md  2025-01-25_RDKit記述子更新完了.md  2025-01-25___init__バグ修正完了.md  2025-01-25_セキュリティ修正完了.md  2025-01-25_リポジトリ整理・GitHubコミット完了.md  2025-01-25_分子特徴量バグ修正完了.md  (+7 more)
chemforge/: __init__.py  __main__.py
chemforge/admet/: __init__.py  admet_predictor.py  cns_mpo.py  drug_likeness.py  physicochemical_predictor.py  property_predictor.py  toxicity_predictor.py
chemforge/cli/: __init__.py  admet.py  chat.py  generate.py  main.py  optimize.py  predict.py  train.py
chemforge/core/: __init__.py  ensemble_model.py  gnn_model.py  multi_target_predictor.py  pwa_pet_attention.py  su2_gate.py  transformer_model.py
chemforge/data/: __init__.py  admet_predictor.py  chembl_loader.py  cns_scaffolds.py  custom_loader.py  data_preprocessor.py  molecular_features.py  molecular_preprocessor.py  (+3 more)
config/: chemforge.yaml  default_config.yaml
docs/: changelog.rst  conf.py  index.rst  installation.rst  make.bat  quickstart.rst
examples/: admet_prediction_demo.py  basic_usage.py  chembl_integration.py  cli_demo.py  cns_target_prediction_demo.py  cns_targets_example.py  data_processing_demo.py  deep_learning_models_demo.py  gui_demo.py  molecular_generation_demo.py  pretrained_models_demo.py  pwa_pet_transformer_demo.py  test_demo.py  training_demo.py  utils_demo.py
notebooks/: 01_getting_started.ipynb
scripts/: bench_memory.sh  benchmark.py  download_data.py  export_onnx.py  fetch_cns_targets.py  fetch_correct_chembl_ids.py  find_correct_ion_channels.py  setup_environment.py  verify_chembl_ids.py  verify_chembl_ids_v2.py  verify_uniprot_ids.py
tests/: __init__.py  conftest.py  run_all_tests.py  test_admet_predictor.py  test_cli.py  test_cns_scaffolds.py  test_config_pydantic.py  test_core.py  test_data_chembl_loader.py  test_data_molecular_features.py  test_generation_genetic_optimizer.py  test_generation_rl_optimizer.py  test_generation_vae_generator.py  test_gui_dash_app.py  test_gui_gui_utils.py  test_gui_streamlit_app.py  test_gui_widgets.py  test_integration.py  test_models_ensemble.py  test_models_gnn.py  test_molecular_features.py  test_performance.py  test_pretrained_data_preparation.py  test_pretrained_model_trainer.py  test_property_predictor.py  test_pwa_pet_attention.py  test_scaffold_generator.py  test_su2_gate.py  test_targets.py  test_training_system.py  test_transformer_pwa_pet.py  test_utils.py  test_utils_config_utils.py  test_utils_database.py  test_utils_file_utils.py  test_utils_logging_utils.py  test_utils_validation.py  test_utils_visualization.py
(+65 files in other folders)
