[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemforge"
version = "0.1.0"
description = "Advanced CNS drug discovery platform with PWA+PET Transformer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ChemForge Development Team", email = "chemforge@example.com"},
]
keywords = [
    "pIC50", "QSAR", "molecular", "prediction", "ChEMBL", 
    "drug discovery", "cheminformatics", "transformer", "GNN", "ensemble",
    "PWA", "PET", "CNS", "attention", "SU2", "RoPE"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rdkit>=2023.03.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=2.0.0",
    "optuna>=3.0.0",
    "tqdm>=4.64.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "chembl_webresource_client>=0.10.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "graphene>=3.0.0",
    "streamlit>=1.20.0",
    "dash>=2.10.0",
    "dash-bootstrap-components>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.8.0",
    "sphinx-autodoc-typehints>=1.0.0",
]
gui = [
    "streamlit>=1.20.0",
    "plotly>=5.0.0",
    "dash>=2.10.0",
    "dash-bootstrap-components>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/zapabob/chemforge"
Documentation = "https://chemforge.readthedocs.io/"
Repository = "https://github.com/zapabob/chemforge.git"
Issues = "https://github.com/zapabob/chemforge/issues"
Changelog = "https://github.com/zapabob/chemforge/blob/main/CHANGELOG.md"

[project.scripts]
chemforge = "chemforge.cli.main:main"

[tool.setuptools.packages.find]
include = ["chemforge*"]

[tool.setuptools.package-data]
chemforge = [
    "config/*.yaml",
    "config/targets/*.yaml",
    "data/*.csv",
    "models/*.pt",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=chemforge",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "chembl_webresource_client.*",
    "optuna.*",
    "torch.*",
    "torchvision.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "streamlit.*",
    "dash.*",
    "dash_bootstrap_components.*",
    "fastapi.*",
    "uvicorn.*",
    "graphene.*",
]
ignore_missing_imports = true